--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
     header {
       text-align: center;
-      background: url("images/banner.jpg");
+      background: url("http://mediastorage.bauermedia.co.uk/dc/b6276/1873e/927e3/730bf/b995b/5c86e/beydublinposter_778x436.jpg?1454916579");
       background-size: cover;
       color: white;
     }
+    
+    #profile {
+      width: 50 px;
+      height: 50 px;
+      text-align: center;
+    }
+    
     .nav {
       color: white;
     }
